--- a/TradeBash/src/TradeBash.Web/appsettings.json
+++ b/TradeBash/src/TradeBash.Web/appsettings.json
@@ -1,7 +1,9 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\v11.0;Database=tradebash;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "SqliteConnection": "Data Source=database.sqlite"
+    "SqliteConnection": "Data Source=database.sqlite",
+    "SqlServerConnection": "Server=(localdb)\\mssqllocaldb;Database=TradeBashDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqlServerDockerConnection": "Server=localhost,11433;Database=TradeBashDb;User=SA;Password=Pwd12345!"
   },
   "Logging": {
     "IncludeScopes": false,
