--- a/TradeBash/src/TradeBash.Web/appsettings.json
+++ b/TradeBash/src/TradeBash.Web/appsettings.json
@@ -3,7 +3,8 @@
     "DefaultConnection": "Server=(localdb)\\v11.0;Database=tradebash;Trusted_Connection=True;MultipleActiveResultSets=true",
     "SqliteConnection": "Data Source=database.sqlite",
     "SqlServerConnection": "Server=(localdb)\\mssqllocaldb;Database=TradeBashDb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "SqlServerDockerConnection": "Server=localhost,1433;Database=TradeBashDb;User=SA;Password=Pwd12345!"
+    "SqlServerDockerConnection": "Server=localhost,1433;Database=TradeBashDb;User=SA;Password=Pwd12345!",
+    "IEXConnection" : "https://cloud.iexapis.com/stable/stock/{0}/chart/{1}?token=pk_b05d7db530fb4f9da669428e49ea940c"
   },
   "Logging": {
     "IncludeScopes": false,
