--- a/TradeBash/src/TradeBash.Web/TradeBash.Web.csproj
+++ b/TradeBash/src/TradeBash.Web/TradeBash.Web.csproj
@@ -25,5 +25,9 @@
       <DependentUpon>Update.cs</DependentUpon>
     </Compile>
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Migrations" />
+  </ItemGroup>
 
 </Project>
