publish zip artifact

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,3 +48,8 @@ steps:
     publishWebProjects: false
     arguments: '--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)'
     zipAfterPublish: true
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
+  # The condition argument specifies to run the task only when the previous task succeeds.
+  condition: succeeded()
