--- a/TradeBash.DataCentre/Properties/launchSettings.json
+++ b/TradeBash.DataCentre/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "TradeBash.DataCentre": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchBrowser": false,
+      "applicationUrl": "https://localhost:5001;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
