--- a/TradeBash/src/TradeBash.Core/TradeBash.Core.csproj
+++ b/TradeBash/src/TradeBash.Core/TradeBash.Core.csproj
@@ -12,4 +12,9 @@
     <ProjectReference Include="..\TradeBash.SharedKernel\TradeBash.SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Events" />
+    <Folder Include="Handlers" />
+  </ItemGroup>
+
 </Project>
