--- a/TradeBash/src/TradeBash.Web/TradeBash.Web.csproj
+++ b/TradeBash/src/TradeBash.Web/TradeBash.Web.csproj
@@ -30,5 +30,11 @@
   <ItemGroup>
     <Folder Include="Migrations" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\ToDoRazorPage\Index.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\ToDoRazorPage\Populate.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\ToDo\Index.cshtml" />
+  </ItemGroup>
 
 </Project>
