--- a/TradeBash/src/TradeBash.Web/TradeBash.Web.csproj
+++ b/TradeBash/src/TradeBash.Web/TradeBash.Web.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <ProjectReference Include="..\..\..\TradeBash.DataCentre\TradeBash.DataCentre.csproj" />
     <ProjectReference Include="..\TradeBash.Infrastructure\TradeBash.Infrastructure.csproj" />
   </ItemGroup>
   
